--- a/configs/vllm_config/qwen3_4B.yaml
+++ b/configs/vllm_config/qwen3_4B.yaml
@@ -1,7 +1,7 @@
 # vLLM serve configuration (for server startup)
 # uv run vllm serve --config configs/vllm_config/qwen3_8B.yaml
 model: "Qwen/Qwen3-4B-Instruct-2507" # Qwen/Qwen3-4B-Thinking-2507 for reasoning model
-download_dir: /vol/miltank/users/$USER/LLMs
+download_dir: /vol/miltank/projects/LLMs
 served-model-name: "default"
 host: "localhost"
 port: 8000
