feature: First CDMv1 dataset for one admission

--- a/configs/database/benchmark_creation.yaml
+++ b/configs/database/benchmark_creation.yaml
@@ -8,3 +8,6 @@ hadm_id_file: hadm_id_list.txt
 
 # Output filename for the benchmark JSON
 output_filename: benchmark_data.json
+
+#Output filename for the benchmark JSON based on cdmmv1
+output_filename_cdmmv1: benchmark_data_cdmmv1.json
