--- a/configs/database/benchmark_creation.yaml
+++ b/configs/database/benchmark_creation.yaml
@@ -10,4 +10,4 @@ hadm_id_file: hadm_id_list.txt
 output_filename: benchmark_data.json
 
 #Output filename for the benchmark JSON based on cdmmv1
-output_filename_cdmmv1: benchmark_data_cdmmv1.json
+output_filename_cdmv1: benchmark_data_cdmv1.json
