--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ requires-python = ">=3.11"
 dependencies = [
     "dotenv>=0.9.9",
     "hydra-core>=1.3.2",
+    "langchain>=1.0.5",
+    "langchain-openai>=1.0.2",
     "loguru>=0.7.3",
     "matplotlib>=3.10.6",
     "openai>=1.109.1",
