Added pytest to test student db access. With this also added: - pytest structure - pre-commit for auto pytest/ruff running (before git commit and push) - Updated README + CLAUDE.md - The auto formatting formatted some files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
 [dependency-groups]
 dev = [
     "hatchling>=1.27.0",
+    "pre-commit>=4.4.0",
+    "pytest>=9.0.1",
     "ruff>=0.13.2",
 ]
 
