--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "loguru>=0.7.3",
     "matplotlib>=3.10.6",
     "openai>=1.109.1",
+    "pandas>=2.3.3",
     "psycopg>=3.2.10",
     "pydantic>=2.11.9",
     "tqdm>=4.67.1",
