Working base tool calling model (qwen3_instruct + hermes). Try out: run llm_langchain_bench_auto.py or llm_langchain_auto.py for only one case and see whole thinking process

--- a/configs/vllm_config/qwen3_4B.yaml
+++ b/configs/vllm_config/qwen3_4B.yaml
@@ -11,5 +11,8 @@ enable-prefix-caching: true
 max-model-len: 2048 # allowed number of input and output tokens together
 tensor-parallel-size: 1 # number of gpus
 
+enable-auto-tool-choice: true
+tool-call-parser: "hermes"
+
 # Reasoning parsing handled by server
 #reasoning-parser: "qwen3" <- remove when no thinking wanted
