--- a/configs/database/benchmark_creation.yaml
+++ b/configs/database/benchmark_creation.yaml
@@ -8,3 +8,6 @@ hadm_id_file: hadm_id_list.txt
 
 # Output filename for the benchmark JSON
 output_filename: benchmark_data.json
+
+# Process all admissions (true) or stop at first complete case (false)
+all: false
