enhancement: create benchmark dataset for number of n admissions

--- a/configs/database/benchmark_creation.yaml
+++ b/configs/database/benchmark_creation.yaml
@@ -9,5 +9,5 @@ hadm_id_file: hadm_id_list.txt
 # Output filename for the benchmark JSON
 output_filename: benchmark_data.json
 
-# Process all admissions (true) or stop at first complete case (false)
-all: false
+# Process number of admissions to include in the benchmark
+num_cases: 2399
