--- a/configs/database/benchmark_creation.yaml
+++ b/configs/database/benchmark_creation.yaml
@@ -10,4 +10,4 @@ hadm_id_file: hadm_id_list.txt
 output_filename: benchmark_data.json
 
 # Process number of admissions to include in the benchmark
-num_cases: 2399
+num_cases: null
