Added missing info for full info case. Changed related files accordingly

--- a/configs/benchmark/full_info.yaml
+++ b/configs/benchmark/full_info.yaml
@@ -1,3 +1,7 @@
 defaults:
   - base
   - _self_
+
+# Lab results configuration
+lab_results:
+  include_all: false  # Set to true to include all results, false for abnormal only
