Assigned events based on 1 day window (results in new table)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     hooks:
     - id: check-yaml
     - id: end-of-file-fixer
+      exclude: ^database/hadm_id_list\.txt$
     - id: trailing-whitespace
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.14.5
