--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pandas>=2.3.3",
     "psycopg>=3.2.10",
     "pydantic>=2.11.9",
+    "streamlit>=1.51.0",
     "tqdm>=4.67.1",
     "vllm>=0.10.2",
 ]
