Async processing + jsonl output writing

--- a/configs/benchmark/full_info.yaml
+++ b/configs/benchmark/full_info.yaml
@@ -1,3 +1,7 @@
 defaults:
   - base
   - _self_
+
+# Path to save benchmark results in JSONL format (one result per line)
+# Set to null to disable output file writing
+results_output_path: outputs/results_full_info.jsonl
