--- a/configs/vllm_config/llama3.3_70B.yaml
+++ b/configs/vllm_config/llama3.3_70B.yaml
@@ -5,9 +5,10 @@ host: "localhost"
 port: 8000
 
 enable-prefix-caching: true
+quantization: bitsandbytes
 
 max-model-len: 16384
 tensor-parallel-size: 1
 
 enable-auto-tool-choice: true
-tool-call-parser: "hermes"
+tool-call-parser: "llama3_json"
