--- a/configs/vllm_config/no_tool_calling/deepseekR1_14B.yaml
+++ b/configs/vllm_config/no_tool_calling/deepseekR1_14B.yaml
@@ -1,4 +1,4 @@
-model: "google/gemma-3-27b-it" 
+model: "deepseek-ai/DeepSeek-R1-Distill-Qwen-14B"
 download_dir: /srv/llm-weights
 served-model-name: "default"
 host: "localhost"
@@ -8,6 +8,3 @@ enable-prefix-caching: true
 
 max-model-len: 16384
 tensor-parallel-size: 1
-
-enable-auto-tool-choice: true
-tool-call-parser: "hermes"
