--- a/configs/vllm_config/no_tool_calling/deepseekR1_32B.yaml
+++ b/configs/vllm_config/no_tool_calling/deepseekR1_32B.yaml
@@ -1,13 +1,11 @@
-model: "google/medgemma-27b-text-it" 
+model: "deepseek-ai/DeepSeek-R1-Distill-Qwen-32B"
 download_dir: /srv/llm-weights
 served-model-name: "default"
 host: "localhost"
 port: 8000
 
 enable-prefix-caching: true
+quantization: bitsandbytes
 
 max-model-len: 16384
 tensor-parallel-size: 1
-
-enable-auto-tool-choice: true
-tool-call-parser: "hermes"
