--- a/configs/vllm_config/no_tool_calling/gemma3_27B.yaml
+++ b/configs/vllm_config/no_tool_calling/gemma3_27B.yaml
@@ -1,4 +1,4 @@
-model: "deepseek-ai/DeepSeek-R1-Distill-Llama-70B"
+model: "google/gemma-3-27b-it" 
 download_dir: /srv/llm-weights
 served-model-name: "default"
 host: "localhost"
@@ -7,7 +7,5 @@ port: 8000
 enable-prefix-caching: true
 
 max-model-len: 16384
+max_num_batched_tokens: 16384
 tensor-parallel-size: 1
-
-enable-auto-tool-choice: true
-tool-call-parser: "hermes"
