--- a/configs/vllm_config/no_tool_calling/oasst_70B.yaml
+++ b/configs/vllm_config/no_tool_calling/oasst_70B.yaml
@@ -1,4 +1,4 @@
-model: "meta-llama/Llama-3.3-70B-Instruct"
+model: "TheBloke/Llama2-70B-OASST-SFT-v10-GPTQ"
 download_dir: /srv/llm-weights
 served-model-name: "default"
 host: "localhost"
@@ -7,11 +7,13 @@ port: 8000
 enable-prefix-caching: true
 quantization: bitsandbytes
 
-max-model-len: 16384
-tensor-parallel-size: 1
+# Max size for llama-2 based models are 4096, can only be increased using rope-scaling
+rope-scaling: '{"type":"linear","factor":2.0}'
 
-enable-auto-tool-choice: true
-tool-call-parser: "llama3_json"
+max-model-len: 8192
+max_num_batched_tokens: 8192
+
+tensor-parallel-size: 1
 
 # Llama based models need chat_template to defined manually
 chat_template: |
