Added different output paths for each model to help keep track of results for analysis

--- a/configs/benchmark/cdm.yaml
+++ b/configs/benchmark/cdm.yaml
@@ -4,4 +4,7 @@ defaults:
 
 # Path to save benchmark results in JSONL format (one result per line)
 # Set to null to disable output file writing
-results_output_path: outputs/results_cdm.jsonl
+results_output_paths:
+  qwen3: outputs/results_qwen3_4b_cdm.jsonl
+  openbio: outputs/results_openbio_cdm.jsonl
+  medgemma: outputs/results_medgemma_4b_cdm.jsonl
