--- a/configs/vllm_config/no_tool_calling/meditron_70B.yaml
+++ b/configs/vllm_config/no_tool_calling/meditron_70B.yaml
@@ -5,13 +5,13 @@ host: "localhost"
 port: 8000
 
 enable-prefix-caching: true
-quantization: bitsandbytes
+quantization: awq
 
 # Max size for llama-2 based models are 4096, can only be increased using rope-scaling
-rope-scaling: '{"type":"linear","factor":2.0}'
+rope-scaling: '{"type":"linear","factor":4.0}'
 
-max-model-len: 8192
-max_num_batched_tokens: 8192
+max-model-len: 16384
+max_num_batched_tokens: 16384
 
 tensor-parallel-size: 1
 
