output paths for different model runs

--- a/configs/benchmark/full_info.yaml
+++ b/configs/benchmark/full_info.yaml
@@ -8,11 +8,16 @@ model_name: null
 results_output_path: null 
 results_output_paths:
   qwen3: outputs/results_qwen3_4b_full_info.jsonl
+  qwen3_30b: output/results_qwen3_30b_full_info.jsonl
   openbio: outputs/results_openbio_8b_full_info.jsonl
+  openbio_70b: outputs/results_openbio_70b_full_info.jsonl
   medgemma_4b: outputs/results_medgemma_4b_full_info.jsonl
   deepseek_14b: outputs/results_deepseekr1_14b_full_info.jsonl
   oasst: outputs/results_oasst_70b_full_info.jsonl
   wizardlm: outputs/results_wizardlm_70b_full_info.jsonl
   medgemma_27b: outputs/results_medgemma_27b_full_info.jsonl
   deepseek_70b: outputs/results_deepseekr1_70b_full_info.jsonl
-  
+  clinical_camel: outputs/results_clinical_camel_70b_full_info.jsonl
+  deepseek_32b: outputs/results_deepseekr1_32b_full_info.jsonl
+  meditron: outputs/results_meditron_70b_full_info.jsonl  
+  llama3: outputs/results_llama3_70b_full_info.jsonl
