--- a/configs/benchmark/base.yaml
+++ b/configs/benchmark/base.yaml
@@ -1,6 +1,7 @@
 benchmark_data_path: database/output/benchmark_data.json
 
-num_cases: 2398
+# num_cases: 2398
+num_cases: 10
 
 # vLLM server configuration
 base_url: http://localhost:8000/v1
