Added summarization for context length control in full_info benchmark: 1. All imaging regions (if fits) 2. Filter to abdomen-only imaging 3. Summarize individual abdomen reports 4. Summarize combined summaries 5. Hard truncate as fallback
Key changes:
- New cdm/prompts/text_utils.py: Token counting, truncation, auto-detect
  model info from vLLM server (uses 'root' field for HF model name)
- New cdm/prompts/context_control.py: Cascading context control logic
- New cdm/prompts/full_info/summarize.j2: MIMIC-CDM summarization prompt
- Modified configs/benchmark/full_info.yaml: enable_summarization config
- Modified scripts/run_benchmark_full_info.py: Integration with context control

--- a/configs/benchmark/full_info.yaml
+++ b/configs/benchmark/full_info.yaml
@@ -5,3 +5,9 @@ defaults:
 # Path to save benchmark results in JSONL format (one result per line)
 # Set to null to disable output file writing
 results_output_path: outputs/results_full_info.jsonl
+
+# Summarization settings
+# When enabled, context length is controlled by summarizing imaging reports
+# Model info is auto-detected from the running vLLM server
+enable_summarization: true
+final_diagnosis_tokens: 25  # Reserve tokens for LLM output
