Replace devstral2_24B with mistralSmall3.2_24B configuration

--- a/configs/vllm_config/mistralSmall3.2_24B.yaml
+++ b/configs/vllm_config/mistralSmall3.2_24B.yaml
@@ -1,4 +1,4 @@
-model: "mistralai/Devstral-Small-2-24B-Instruct-2512" 
+model: "mistralai/Mistral-Small-3.2-24B-Instruct-2506" 
 download_dir: /srv/llm-weights
 served-model-name: "default"
 host: "localhost"
