--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,9 @@ dependencies = [
     "tqdm>=4.67.1",
     "vllm>=0.13.0",
     "thefuzz>=0.22.1",
-    "bitsandbytes>=0.43.1",  
-    "numpy>=2.2.6"
+    "bitsandbytes>=0.43.1",
+    "numpy>=2.2.6",
+    "mistral-common>=1.8.5",
 ]
 
 [dependency-groups]
